# system-design-knowledge-graph

./: .env.example  .gitignore  LICENSE  QUALIFIED_PROMPT.md  README.md  SECURITY.md  chat-gpt-reply.md  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
backend/: agent_loop.py  agent_orchestrator.py  agent_trace.py  extractor.py  graph_manager.py  json_util.py  llm_planner.py  logging_setup.py  main.py  models.py  orchestrator.py
backend/agents/: concept_agent.py  concept_detail_agent.py  recommendation_agent.py  relationship_agent.py
backend/utils/: gateway_llm.py  gateway_v2.py  llm.py  parser.py
data/: graph.json
frontend/: index.html
prompts/: agent_orchestrator.txt  concept_detail.txt  concept_extraction.txt  recommendations.txt  relationship_reasoning.txt
tests/: test_agent_mode.py  test_extractor.py  test_gateway_v2.py  test_imports.py  test_json_util.py
