[project]
name = "system-design-knowledge-graph"
version = "0.1.0"
description = "AI-powered evolving knowledge graph for system design learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.47.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
